# Azure_k8s_Video_Streaming

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  reame.md  todo.txt
backend/: authentication.py  config.py  database.py  hash_converter.py  main.py  models.py
backend/routes/: admin.py  authentication.py  azure.py  database.py  models.py  other_routes.py  users.py  videos.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: AdminPage.js  App.js  Home.js  LoginPage.js  RegisterPage.js  UserPage.js  VideoUploader.js  WatchVideo.js
frontend/video-app/: package-lock.json
frontend/video-app/src/: AdminPage.js  App.js  Home.js  LoginPage.js  RegisterPage.js  config.js
k8s_alembic/myAlembic/: README  env.py
k8s_alembic/myAlembic/versions/: 53e593c5ccfd_first_build.py
k8s_yaml/: ingress.yaml  video-fullend.yaml
localhost_alembic/video_alembic/: env.py  models.py  write_video_to_db.py
localhost_alembic/video_alembic/versions/: 345ba56b00ff_add_video_uploader.py  6fe5c4eb3557_add_video_column.py  b9d2ffb40bb5_change_time_zone.py  ca851fafec63_add_auto_video_id.py
video-alembic/: env.py
video-alembic/versions/: ced055f15a71_first_create.py
video_alembic/: env.py  models.py  play_video_from_db.py  video.py  write_video_to_db.py
video_alembic/versions/: 1fa963a0c169_remove_video_data_col.py  2ce0866e44f2_add_table.py  3eaee781fd22_add_url_column.py  cfa65299b7e5_add_watch_at_column.py
